--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-
 scale=1.0">
 
-<title>Home | Nossa Escola</title>
+<title>Home | Sobre a feira</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
