--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@ scale=1.0">
     da Escola">
     </section>
     <!--Seção estudantes é a parte do paragrafo 2 da página-->
-<section class="estudante">
-    <h1 class="estudante_titulo">Apresentaçãoes</h1>
+<section class="apresentações">
+    <h1 class="apresentações_titulo">Apresentaçãoes</h1>
     <p> </p>
-    <div class="estudantes_todos">
-    <div class="estudante-div">
-    <img class="estudante-imagem" src="estudante_menino_1.png" alt="Foto da
+    <div class="apresentações_todos">
+    <div class="apresentações-div">
+    <img class="apresentação-imagem" src="estudante_menino_1.png" alt="Foto da
     
     turma do 1CDS do ano de 2023">
     
