--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ scale=1.0">
     <p> </p>
     <div class="apresentações_todos">
     <div class="apresentações-div">
-    <img class="apresentação-imagem" src="estudante_menino_1.png" alt="Foto da
+    <img class="apresentação-imagem" src="analise.jfif" alt="Foto da
     
     turma do 1CDS do ano de 2023">
     
