--- a/index.html
+++ b/index.html
@@ -95,12 +95,9 @@ alt="Foto da turma do 1CDS do ano de 2023">
 <a href="https://cursos.alura.com.br/dashboard">
 <p> </p>
 <img class="estudante-icone" src="site_school.png" alt="Link do
-
 Site da escola"></a>
-
-<img class="estudante-icone" src="instagram.png" alt="Link do
-
-Instagram">
+<img class="estudante-icone" src="instagram.png" alt="Link do Instagram">
+<img class="estudante-icone" src="facebook.png" alt="Link do Facebook">
 
 </div>
 </div>
