--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ da Escola">
 <p> </p>
 <div class="estudantes_todos">
 <div class="estudante-div">
-<img class="estudante-imagem" src="estudante_menino_1.png" alt="Foto da
+<img class="estudante-imagem" src="analise.jfif" alt="Foto da
 
 turma do 1CDS do ano de 2023">
 
