--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ escola"></a>
 </div>
 
 <div class="estudante-div">
-<img class="estudante-imagem" src="estudante_menino_1.png" alt="Foto da
+<img class="estudante-imagem" src="analise.jfif" alt="Foto da
 turma do 1CDS do ano de 2023">
 
 <h3 class="estudante-nome">Aluno 6</h3>
@@ -77,7 +77,7 @@ Facebook">
 <section class="estudante">
 <div class="estudantes_todos">
 <div class="estudante-div">
-<img class="estudante-imagem" src="estudante_menina_1.png" alt="Foto da
+<img class="estudante-imagem" src="analise.jfif" alt="Foto da
 turma do 1CDS do ano de 2023">
 <h3 class="estudante-nome">Aluno 1</h3>
 <a href="https://cursos.alura.com.br/dashboard">
@@ -89,7 +89,7 @@ escola"></a>
 </div>
 
 <div class="estudante-div">
-<img class="estudante-imagem" src="estudante_menina_1.png"
+<img class="estudante-imagem" src="analise.jfif"
 alt="Foto da turma do 1CDS do ano de 2023">
 <h3 class="estudante-nome">Aluno 6</h3>
 <a href="https://cursos.alura.com.br/dashboard">
