--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ da Escola">
 
 turma do 1CDS do ano de 2023">
 
-<h3 class="estudante-nome">Aluno 1</h3>
+<h3 class="ANALISE E DESENVOLVIMENTO DE SISTEMAS">DS</h3>
 <a href="https://cursos.alura.com.br/dashboard">
 <p> </p>
 <img class="estudante-icone" src="site_school.png" alt="Link do Site da
@@ -52,10 +52,10 @@ escola"></a>
 </div>
 
 <div class="estudante-div">
-<img class="estudante-imagem" src="analise.jfif" alt="Foto da
+<img class="estudante-imagem" src="adm.jfif" alt="Foto da
 turma do 1CDS do ano de 2023">
 
-<h3 class="estudante-nome">Aluno 6</h3>
+<h3 class="ADMINISTRAÇÂO">ADM</h3>
 <a href="https://cursos.alura.com.br/dashboard">
 <p> </p>
 <img class="estudante-icone" src="site_school.png" alt="Link do Site da
