--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@ da Escola">
 <p> </p>
 <div class="estudantes_todos">
 <div class="estudante-div">
-<img class="estudante-imagem" src="analise.jfif" alt="Foto da
-
-turma do 1CDS do ano de 2023">
+<img class="estudante-imagem" src="analise.jfif" alt="Foto da turma do 1CDS do ano de 2023">
 
 <h3 class="ANALISE E DESENVOLVIMENTO DE SISTEMAS">DS</h3>
 <a href="https://cursos.alura.com.br/dashboard">
@@ -57,7 +55,7 @@ turma do 1CDS do ano de 2023">
 <h3 class="ADMINISTRAÇÂO">ADM</h3>
 <a href="https://cursos.alura.com.br/dashboard">
 <p> </p>
-<img class="estudante-icone" src="site_school.png" alt="Link do Site da
+<img class="estudante-icone" src="logo_nossa_escola.png" alt="Link do Site da
 
 escola"></a>
 
@@ -81,7 +79,7 @@ turma do 1CDS do ano de 2023">
 <h3 class="estudante-nome">Aluno 1</h3>
 <a href="https://cursos.alura.com.br/dashboard">
 <p> </p>
-<img class="estudante-icone" src="site_school.png" alt="Link do Site da
+<img class="estudante-icone" src="logo_nossa_escola.png" alt="Link do Site da
 escola"></a>
 <img class="estudante-icone" src="instagram.png" alt="Link do Instagram">
 <img class="estudante-icone" src="facebook.png" alt="Link do Facebook">
@@ -93,7 +91,7 @@ alt="Foto da turma do 1CDS do ano de 2023">
 <h3 class="estudante-nome">Aluno 6</h3>
 <a href="https://cursos.alura.com.br/dashboard">
 <p> </p>
-<img class="estudante-icone" src="site_school.png" alt="Link do
+<img class="estudante-icone" src="logo_nossa_escola.png" alt="Link do
 Site da escola"></a>
 <img class="estudante-icone" src="instagram.png" alt="Link do Instagram">
 <img class="estudante-icone" src="facebook.png" alt="Link do Facebook">
