--- a/index.html
+++ b/index.html
@@ -12,11 +12,7 @@ scale=1.0">
 <body>
 <!--header é a parte do cabeçalho do site, é o topo da página-->
 <header class="cabecalho-itens">
-
-<img class="cabecalho_imagem" src="logo_nossa_escola.png" alt="Logo da
-
-Página">
-
+<img class="cabecalho_imagem" src="logo_nossa_escola.png" alt="Logo da Página">
 <h1 class="titulo_site">Feira de profissões</h1>
 <div class="sociais">
 <img class="sociais" src="whatsapp.png" alt="Logo do Whats da Escola">
@@ -24,71 +20,63 @@ Página">
 <img class="sociais" src="instagram.png" alt="instagram da Escola">
 </div>
 </header>
+
+  
 <!--Seção banner 1 é a parte do paragrafo 1 da página-->
 <section class="banner1">
-<img class="escola.image" src="banner feira das profissoes.png" alt="Banner
-da Escola">
+<img class="escola.image" src="banner feira das profissoes.png" alt="Banner da Escola">
 </section>
 
 <!--Seção estudantes é a parte do paragrafo 2 da página-->
-<section class="estudante">
-<h1 class="estudante_titulo">Apresentações</h1>
+<section class="apresentações">
+<h1 class="apresentações_titulo">Apresentações</h1>
 <p> </p>
 <div class="estudantes_todos">
 <div class="estudante-div">
 <img class="estudante-imagem" src="analise.jfif" alt="Foto da turma do 1CDS do ano de 2023">
-
 <h3 class="ANALISE E DESENVOLVIMENTO DE SISTEMAS">DS</h3>
 <a href="https://cursos.alura.com.br/dashboard">
 <p> </p>
-<img class="estudante-icone" src="logo_nossa_escola.png" alt="Link do Site da escola">
+<img class="curso-icone" src="logo_nossa_escola.png" alt="Link do Site da escola">
 </a>
-
 <img class="estudante-icone" src="instagram.png" alt="Link do Instagram">
 <img class="estudante-icone" src="facebook.png" alt="Link do Facebook">
 </div>
 
+  
 <div class="estudante-div">
 <img class="estudante-imagem" src="adm.jfif" alt="Foto da
 turma do 1CDS do ano de 2023">
-
 <h3 class="ADMINISTRAÇÂO">ADM</h3>
 <a href="https://cursos.alura.com.br/dashboard">
 <p> </p>
-<img class="estudante-icone" src="logo_nossa_escola.png" alt="Link do Site da
-
-escola"></a>
-
-<img class="estudante-icone" src="instagram.png" alt="Link do
-
-Instagram">
-
-<img class="estudante-icone" src="facebook.png" alt="Link do
-
-Facebook">
+<img class="curso-icone" src="logo_nossa_escola.png" alt="Link do Site da escola">
+</a>
+<img class="curso-icone" src="instagram.png" alt="Link do Instagram">
+<img class="curso-icone" src="facebook.png" alt="Link do Facebook">
 </div>
 </div>
 </section>
 
 <!--Seção estudantes é a parte do paragrafo 3 da página-->
-<section class="estudante">
-<div class="estudantes_todos">
-<div class="estudante-div">
-<img class="estudante-imagem" src="analise.jfif" alt="Foto da
+<section class="curso">
+<div class="curso_todos">
+<div class="curso-div">
+<img class="curso-imagem" src="quimica.jpg" alt="Foto da
 turma do 1CDS do ano de 2023">
-<h3 class="estudante-nome">Aluno 1</h3>
+<h3 class="QUIMICA-nome">QUIMICA</h3>
 <a href="https://cursos.alura.com.br/dashboard">
 <p> </p>
-<img class="estudante-icone" src="logo_nossa_escola.png" alt="Link do Site da
+<img class="curso-icone" src="logo_nossa_escola.png" alt="Link do Site da
 escola"></a>
-<img class="estudante-icone" src="instagram.png" alt="Link do Instagram">
-<img class="estudante-icone" src="facebook.png" alt="Link do Facebook">
+<img class="curso-icone" src="instagram.png" alt="Link do Instagram">
+<img class="curso-icone" src="facebook.png" alt="Link do Facebook">
 </div>
 
-<div class="estudante-div">
-<img class="estudante-imagem" src="analise.jfif"
+<div class="curso-div">
+<img class="curso-imagem" src="magisterio.webp"
 alt="Foto da turma do 1CDS do ano de 2023">
-<h3 class="estudante-nome">Aluno 6</h3>
+<h3 class="FORMAÇÃO DE DOCENTES-nome">MAGISTERIO</h3>
 <a href="https://cursos.alura.com.br/dashboard">
 <p> </p>
 <img class="estudante-icone" src="logo_nossa_escola.png" alt="Link do
