--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ escola"></a>
 </div>
 
 <div class="curso-div">
-<img class="curso-imagem" src="magisterio.webp"
+<img class="curso-imagem" src="FD.jpg"
 alt="Foto da turma do 1CDS do ano de 2023">
 <h3 class="FORMAÇÃO DE DOCENTES-nome">MAGISTERIO</h3>
 <a href="https://cursos.alura.com.br/dashboard">
