--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ turma do 1CDS do ano de 2023">
 <section class="curso">
 <div class="curso_todos">
 <div class="curso-div">
-<img class="curso-imagem" src="quimica.jpg" alt="Foto da
+<img class="curso-imagem" src="adm.jfif" alt="Foto da
 turma do 1CDS do ano de 2023">
 <h3 class="QUIMICA-nome">QUIMICA</h3>
 <a href="https://cursos.alura.com.br/dashboard">
@@ -74,8 +74,7 @@ escola"></a>
 </div>
 
 <div class="curso-div">
-<img class="curso-imagem" src="FD.jpg"
-alt="Foto da turma do 1CDS do ano de 2023">
+<img class="curso-imagem" src="adm.jfif" alt="Foto da turma do 1CDS do ano de 2023">
 <h3 class="FORMAÇÃO DE DOCENTES-nome">MAGISTERIO</h3>
 <a href="https://cursos.alura.com.br/dashboard">
 <p> </p>
