--- a/index.html
+++ b/index.html
@@ -2,102 +2,110 @@
 <html lang="pt-br">
 <head>
 <meta charset="UTF-8">
+
 <meta name="viewport" content="width=device-width, initial-
 scale=1.0">
-<title>Home | Feira de profissões</title>
+
+<title>Home | FEIRA DE PROFISSÕES</title>
 <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 <!--header é a parte do cabeçalho do site, é o topo da página-->
 <header class="cabecalho-itens">
-<img class="cabecalho_imagem" src="logo_nossa_escola.png" alt="Logo da Página">
-<h1 class="titulo_site">Feira de profissões</h1>
+
+<img class="cabecalho_imagem" src="logo_page.png" alt="Logo da
+
+Página">
+
+<h1 class="titulo_site">FEIRA DE PROFISSÕES</h1>
 <div class="sociais">
 <img class="sociais" src="whatsapp.png" alt="Logo do Whats da Escola">
 <img class="sociais" src="facebook.png" alt="Facebook da Escola">
 <img class="sociais" src="instagram.png" alt="instagram da Escola">
 </div>
 </header>
-
-  
 <!--Seção banner 1 é a parte do paragrafo 1 da página-->
 <section class="banner1">
-<img class="escola.image" src="banner feira das profissoes.png" alt="Banner da Escola">
+<img class="escola.image" src="banner feira das profissões,png" alt="Banner
+da Escola">
 </section>
-
 <!--Seção estudantes é a parte do paragrafo 2 da página-->
-<section class="apresentações">
-<h1 class="apresentações_titulo">Apresentações</h1>
+<section class="estudante">
+<h1 class="estudante_titulo">APRESENTAÇÕES</h1>
 <p> </p>
 <div class="estudantes_todos">
 <div class="estudante-div">
-<img class="estudante-imagem" src="analise.jfif" alt="Foto da turma do 1CDS do ano de 2023">
-<h3 class="ANALISE E DESENVOLVIMENTO DE SISTEMAS">DS</h3>
+<img class="estudante-imagem" src="estudante_menino_1.png" alt="Foto da turma do 1CDS do ano de 2023">
+<h3 class="estudante-nome">Aluno 1</h3>
 <a href="https://cursos.alura.com.br/dashboard">
 <p> </p>
-<img class="curso-icone" src="logo_nossa_escola.png" alt="Link do Site da escola">
-</a>
+<img class="estudante-icone" src="site_school.png" alt="Link do Site da escola"></a>
 <img class="estudante-icone" src="instagram.png" alt="Link do Instagram">
 <img class="estudante-icone" src="facebook.png" alt="Link do Facebook">
 </div>
 
-  
+  <!--Seção estudantes é a parte do paragrafo 2 da página-->
+<section class="estudante">
+<h1 class="estudante_titulo">Alunos em destaque 2024</h1>
+<p> </p>
+<div class="estudantes_todos">
 <div class="estudante-div">
-<img class="estudante-imagem" src="adm.jfif" alt="Foto da
-turma do 1CDS do ano de 2023">
-<h3 class="ADMINISTRAÇÂO">ADM</h3>
-<a href="https://cursos.alura.com.br/dashboard">
-<p> </p>
-<img class="curso-icone" src="logo_nossa_escola.png" alt="Link do Site da escola">
-</a>
-<img class="curso-icone" src="instagram.png" alt="Link do Instagram">
-<img class="curso-icone" src="facebook.png" alt="Link do Facebook">
-</div>
-</div>
-</section>
+<img class="estudante-imagem" src="estudante_menino_1.png" alt="Foto da
 
-<!--Seção estudantes é a parte do paragrafo 3 da página-->
-<section class="curso">
-<div class="curso_todos">
-<div class="curso-div">
-<img class="curso-imagem" src="adm.jfif" alt="Foto da
 turma do 1CDS do ano de 2023">
-<h3 class="QUIMICA-nome">QUIMICA</h3>
+
+<h3 class="estudante-nome">Aluno 1</h3>
 <a href="https://cursos.alura.com.br/dashboard">
 <p> </p>
-<img class="curso-icone" src="logo_nossa_escola.png" alt="Link do Site da
+<img class="estudante-icone" src="site_school.png" alt="Link do Site da
+
 escola"></a>
-<img class="curso-icone" src="instagram.png" alt="Link do Instagram">
-<img class="curso-icone" src="facebook.png" alt="Link do Facebook">
-</div>
 
-<div class="curso-div">
-<img class="curso-imagem" src="adm.jfif" alt="Foto da turma do 1CDS do ano de 2023">
-<h3 class="FORMAÇÃO DE DOCENTES-nome">MAGISTERIO</h3>
-<a href="https://cursos.alura.com.br/dashboard">
-<p> </p>
-<img class="estudante-icone" src="logo_nossa_escola.png" alt="Link do
-Site da escola"></a>
 <img class="estudante-icone" src="instagram.png" alt="Link do Instagram">
 <img class="estudante-icone" src="facebook.png" alt="Link do Facebook">
+</div>
 
+  <div class="estudante-div">
+<img class="estudante-imagem" src="estudante_menino_1.png" alt="Foto da
+turma do 1CDS do ano de 2023">
+
+<h3 class="estudante-nome">Aluno 6</h3>
+<a href="https://cursos.alura.com.br/dashboard">
+<p> </p>
+<img class="estudante-icone" src="site_school.png" alt="Link do Site da
+
+escola"></a>
+
+<img class="estudante-icone" src="instagram.png" alt="Link do
+
+Instagram">
+
+<img class="estudante-icone" src="facebook.png" alt="Link do
+
+Facebook">
 </div>
 </div>
 </section>
 
-<!--Seção rodapé é a parte final da paragrafo 3 da página-->
-<footer class="escola">
-<img class="logo_rodape" src="logo_nossa_escola.png" alt="Logo
-da Escola">
-<h2 class="escola-título">Mais informações entre em contato<a
-class="link" href="https://wa.me/5541999999999"> 41 9.9999-9999
-</a></h2>
-<p></p>
-<p>©2024 | Curso de ADS | Todos os Direitos Reservados.
-Política de Privacidade | Proteção de dados | Encarregado de
+  <div class="estudante-div">
+<img class="estudante-imagem" src="estudante_menino_1.png" alt="Foto da
+turma do 1CDS do ano de 2023">
 
-dados</p>
+<h3 class="estudante-nome">Aluno 6</h3>
+<a href="https://cursos.alura.com.br/dashboard">
 <p> </p>
-</footer>
-</body>
-</html>
+<img class="estudante-icone" src="site_school.png" alt="Link do Site da
+
+escola"></a>
+
+<img class="estudante-icone" src="instagram.png" alt="Link do
+
+Instagram">
+
+<img class="estudante-icone" src="facebook.png" alt="Link do
+
+Facebook">
+</div>
+</div>
+</section>
