--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@ scale=1.0">
 <!--header é a parte do cabeçalho do site, é o topo da página-->
 <header class="cabecalho-itens">
 
-<img class="cabecalho_imagem" src="logo_page.png" alt="Logo da
-
-Página">
+<img class="cabecalho_imagem" src="logo_nossa_escola.png" alt="Logo da Página">
 
 <h1 class="titulo_site">FEIRA DE PROFISSÕES</h1>
 <div class="sociais">
@@ -27,50 +25,67 @@ Página">
 </header>
 <!--Seção banner 1 é a parte do paragrafo 1 da página-->
 <section class="banner1">
-<img class="escola.image" src="banner feira das profissões,png" alt="Banner
-da Escola">
+<img class="escola.image" src="banner feira das profissões.png" alt="Banner da Escola">
 </section>
 <!--Seção estudantes é a parte do paragrafo 2 da página-->
 <section class="estudante">
-<h1 class="estudante_titulo">APRESENTAÇÕES</h1>
+<h1 class="estudante_titulo">Alunos em destaque 2024</h1>
 <p> </p>
 <div class="estudantes_todos">
 <div class="estudante-div">
-<img class="estudante-imagem" src="estudante_menino_1.png" alt="Foto da turma do 1CDS do ano de 2023">
-<h3 class="estudante-nome">Aluno 1</h3>
-<a href="https://cursos.alura.com.br/dashboard">
-<p> </p>
-<img class="estudante-icone" src="site_school.png" alt="Link do Site da escola"></a>
-<img class="estudante-icone" src="instagram.png" alt="Link do Instagram">
-<img class="estudante-icone" src="facebook.png" alt="Link do Facebook">
-</div>
+<img class="estudante-imagem" src="estudante_menino_1.png" alt="Foto da
+
+turma do 1CDS do ano de 2023">
 
 <h3 class="estudante-nome">Aluno 1</h3>
 <a href="https://cursos.alura.com.br/dashboard">
 <p> </p>
-<img class="estudante-icone" src="site_school.png" alt="Link do Site da escola"></a>
+<img class="estudante-icone" src="site_school.png" alt="Link do Site da
+
+escola"></a>
+
 <img class="estudante-icone" src="instagram.png" alt="Link do Instagram">
 <img class="estudante-icone" src="facebook.png" alt="Link do Facebook">
 </div>
   <div class="estudante-div">
-<img class="estudante-imagem" src="estudante_menino_1.png" alt="Foto da turma do 1CDS do ano de 2023">
+<img class="estudante-imagem" src="estudante_menino_1.png" alt="Foto da
+turma do 1CDS do ano de 2023">
+
 <h3 class="estudante-nome">Aluno 6</h3>
 <a href="https://cursos.alura.com.br/dashboard">
 <p> </p>
-<img class="estudante-icone" src="site_school.png" alt="Link do Site da escola"></a>
-<img class="estudante-icone" src="instagram.png" alt="Link do Instagram">
-<img class="estudante-icone" src="facebook.png" alt="Link do Facebook">
-</div>
+<img class="estudante-icone" src="site_school.png" alt="Link do Site da
 
+escola"></a>
+
+<img class="estudante-icone" src="instagram.png" alt="Link do
+
+Instagram">
+
+<img class="estudante-icone" src="facebook.png" alt="Link do
+
+Facebook">
+</div>
+</div>
 </section>
   <div class="estudante-div">
-<img class="estudante-imagem" src="estudante_menino_1.png" alt="Foto da turma do 1CDS do ano de 2023">
-h3 class="estudante-nome">Aluno 6</h3>
+<img class="estudante-imagem" src="estudante_menino_1.png" alt="Foto da
+turma do 1CDS do ano de 2023">
+
+<h3 class="estudante-nome">Aluno 6</h3>
 <a href="https://cursos.alura.com.br/dashboard">
 <p> </p>
-<img class="estudante-icone" src="site_school.png" alt="Link do Site da escola"></a>
-<img class="estudante-icone" src="instagram.png" alt="Link do Instagram">
-<img class="estudante-icone" src="facebook.png" alt="Link do Facebook">
+<img class="estudante-icone" src="site_school.png" alt="Link do Site da
+
+escola"></a>
+
+<img class="estudante-icone" src="instagram.png" alt="Link do
+
+Instagram">
+
+<img class="estudante-icone" src="facebook.png" alt="Link do
+
+Facebook">
 </div>
 </div>
 </section>
@@ -88,21 +103,7 @@ escola"></a>
 <img class="estudante-icone" src="instagram.png" alt="Link do Instagram">
 <img class="estudante-icone" src="facebook.png" alt="Link do Facebook">
 </div>
-<!--Seção estudantes é a parte do paragrafo 3 da página-->
-<section class="estudante">
-<div class="estudantes_todos">
-<div class="estudante-div">
-<img class="estudante-imagem" src="estudante_menina_1.png" alt="Foto da
-turma do 1CDS do ano de 2023">
-<h3 class="estudante-nome">Aluno 1</h3>
-<a href="https://cursos.alura.com.br/dashboard">
-<p> </p>
-<img class="estudante-icone" src="site_school.png" alt="Link do Site da
-escola"></a>
-<img class="estudante-icone" src="instagram.png" alt="Link do Instagram">
-<img class="estudante-icone" src="facebook.png" alt="Link do Facebook">
-</div>
-<div class="estudante-div">
+  <div class="estudante-div">
 <img class="estudante-imagem" src="estudante_menina_1.png"
 alt="Foto da turma do 1CDS do ano de 2023">
 <h3 class="estudante-nome">Aluno 6</h3>
@@ -136,7 +137,6 @@ v>
 </div>
 </div>
 </section>
-
   <!--Seção rodapé é a parte final da paragrafo 3 da página-->
 <footer class="escola">
 <img class="logo_rodape" src="logo_nossa_escola.png" alt="Logo
