--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <h3 class="estudante-nome">Aluno 1</h3>
 <a href="https://cursos.alura.com.br/dashboard">
 <p> </p>
-<img class="estudante-icone" src="site_school.png" alt="Link do Site da escola"></a>
+<img class="estudante-icone" src="logo_nossa_escola.png" alt="Link do Site da escola"></a>
 <img class="estudante-icone" src="instagram.png" alt="Link do Instagram">
 <img class="estudante-icone" src="facebook.png" alt="Link do Facebook">
 </div>
@@ -40,7 +40,7 @@
 <h3 class="estudante-nome">Aluno 6</h3>
 <a href="https://cursos.alura.com.br/dashboard">
 <p> </p>
-<img class="estudante-icone" src="site_school.png" alt="Link do Site da escola"></a>
+<img class="estudante-icone" src="logo_nossa_escola.png" alt="Link do Site da escola"></a>
 <img class="estudante-icone" src="instagram.png" alt="Link do Instagram">
 <img class="estudante-icone" src="facebook.png" alt="Link do Facebook">
 </div>
@@ -50,7 +50,7 @@
 <h3 class="estudante-nome">Aluno 6</h3>
 <a href="https://cursos.alura.com.br/dashboard">
 <p> </p>
-<img class="estudante-icone" src="site_school.png" alt="Link do Site da escola"></a>
+<img class="estudante-icone" src="logo_nossa_escola.png" alt="Link do Site da escola"></a>
 <img class="estudante-icone" src="instagram.png" alt="Link do Instagram">
 <img class="estudante-icone" src="facebook.png" alt="Link do Facebook">
 </div>
@@ -63,7 +63,7 @@
 <h3 class="estudante-nome">Aluno 1</h3>
 <a href="https://cursos.alura.com.br/dashboard">
 <p> </p>
-<img class="estudante-icone" src="site_school.png" alt="Link do Site da escola"></a>
+<img class="estudante-icone" src="logo_nossa_escola.png" alt="Link do Site da escola"></a>
 <img class="estudante-icone" src="instagram.png" alt="Link do Instagram">
 <img class="estudante-icone" src="facebook.png" alt="Link do Facebook">
 </div>
@@ -73,7 +73,7 @@ alt="Foto da turma do 1CDS do ano de 2023">
 <h3 class="estudante-nome">Aluno 6</h3>
 <a href="https://cursos.alura.com.br/dashboard">
 <p> </p>
-<img class="estudante-icone" src="site_school.png" alt="Link do Site da escola"></a>
+<img class="estudante-icone" src="logo_nossa_escola.png" alt="Link do Site da escola"></a>
 <img class="estudante-icone" src="instagram.png" alt="Link do Instagram">
 <img class="estudante-icone" src="facebook.png" alt="Link do Facebook">
 </div>
@@ -84,7 +84,7 @@ alt="Foto da turma do 1CDS do ano de 2023">
 <h3 class="estudante-nome">Aluno 6</h3>
 <a href="https://cursos.alura.com.br/dashboard">
 <p> </p>
-<img class="estudante-icone" src="site_school.png" alt="Link do Site da escola"></a>
+<img class="estudante-icone" src="logo_nossa_escola.png" alt="Link do Site da escola"></a>
 <img class="estudante-icone" src="instagram.png" alt="Link do Instagram">
 <img class="estudante-icone" src="facebook.png" alt="Link do Facebook">
 </div>
