--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </header>
 <!--Seção banner 1 é a parte do paragrafo 1 da página-->
 <section class="banner1">
-<img class="escola.image" src="banner feira das profissões.png" alt="Banner da Escola">
+<img class="escola.image" src="banner feira das profissoes.png" alt="Banner da Escola">
 </section>
 <!--Seção estudantes é a parte do paragrafo 2 da página-->
 <section class="estudante">
@@ -27,8 +27,8 @@
 <p> </p>
 <div class="estudantes_todos">
 <div class="estudante-div">
-<img class="estudante-imagem" src="estudante_menino_1.png" alt="Foto da turma do 1CDS do ano de 2023">
-<h3 class="estudante-nome">Aluno 1</h3>
+<img class="estudante-imagem" src="adm.jfif" alt="Foto da turma do 1CDS do ano de 2023">
+<h3 class="estudante-nome">curso 1</h3>
 <a href="https://cursos.alura.com.br/dashboard">
 <p> </p>
 <img class="estudante-icone" src="logo_nossa_escola.png" alt="Link do Site da escola"></a>
@@ -36,8 +36,8 @@
 <img class="estudante-icone" src="facebook.png" alt="Link do Facebook">
 </div>
   <div class="estudante-div">
-<img class="estudante-imagem" src="estudante_menino_1.png" alt="Foto da turma do 1CDS do ano de 2023">
-<h3 class="estudante-nome">Aluno 6</h3>
+<img class="estudante-imagem" src="adm.jfif" alt="Foto da turma do 1CDS do ano de 2023">
+<h3 class="estudante-nome">curso 3</h3>
 <a href="https://cursos.alura.com.br/dashboard">
 <p> </p>
 <img class="estudante-icone" src="logo_nossa_escola.png" alt="Link do Site da escola"></a>
@@ -46,8 +46,8 @@
 </div>
 </section>
   <div class="estudante-div">
-<img class="estudante-imagem" src="estudante_menino_1.png" alt="Foto da turma do 1CDS do ano de 2023">
-<h3 class="estudante-nome">Aluno 6</h3>
+<img class="estudante-imagem" src="adm.jfif" alt="Foto da turma do 1CDS do ano de 2023">
+<h3 class="estudante-nome">curso 4</h3>
 <a href="https://cursos.alura.com.br/dashboard">
 <p> </p>
 <img class="estudante-icone" src="logo_nossa_escola.png" alt="Link do Site da escola"></a>
@@ -59,8 +59,8 @@
 <section class="estudante">
 <div class="estudantes_todos">
 <div class="estudante-div">
-<img class="estudante-imagem" src="estudante_menina_1.png" alt="Foto da turma do 1CDS do ano de 2023">
-<h3 class="estudante-nome">Aluno 1</h3>
+<img class="estudante-imagem" src="adm.jfif" alt="Foto da turma do 1CDS do ano de 2023">
+<h3 class="estudante-nome">curso 2 </h3>
 <a href="https://cursos.alura.com.br/dashboard">
 <p> </p>
 <img class="estudante-icone" src="logo_nossa_escola.png" alt="Link do Site da escola"></a>
@@ -68,9 +68,9 @@
 <img class="estudante-icone" src="facebook.png" alt="Link do Facebook">
 </div>
   <div class="estudante-div">
-<img class="estudante-imagem" src="estudante_menina_1.png"
+<img class="estudante-imagem" src="adm.jfif"
 alt="Foto da turma do 1CDS do ano de 2023">
-<h3 class="estudante-nome">Aluno 6</h3>
+<h3 class="estudante-nome">curso 5</h3>
 <a href="https://cursos.alura.com.br/dashboard">
 <p> </p>
 <img class="estudante-icone" src="logo_nossa_escola.png" alt="Link do Site da escola"></a>
@@ -79,9 +79,8 @@ alt="Foto da turma do 1CDS do ano de 2023">
 </div>
 </section>
   <div class="estudante-div">
-<img class="estudante-imagem" src="estudante_menina_1.png"
-alt="Foto da turma do 1CDS do ano de 2023">
-<h3 class="estudante-nome">Aluno 6</h3>
+<img class="estudante-imagem" src="adm.jfif" alt="Foto da turma do 1CDS do ano de 2023">
+<h3 class="estudante-nome">curso 6</h3>
 <a href="https://cursos.alura.com.br/dashboard">
 <p> </p>
 <img class="estudante-icone" src="logo_nossa_escola.png" alt="Link do Site da escola"></a>
