--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 </section>
 <!--Seção estudantes é a parte do paragrafo 2 da página-->
 <section class="estudante">
-              <h1 class="estudante_titulo">Alunos em destaque 2024</h1>
+              <h1 class="estudante_titulo">FEIRA DE PROFISSÕES</h1>
               <p> </p>
               <div class="estudantes_todos">
               <div class="estudante-div">
-              <img class="estudante-imagem" src="estudante_menino.png" alt="Foto da turma do 1CDS do ano de 2023">
+              <img class="estudante-imagem" src="analise.png" alt="Foto da turma do 1CDS do ano de 2023">
               <h3 class="estudante-nome">Aluno 1</h3>
               <a href="https://cursos.alura.com.br/dashboard">
               <p> </p>
