--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <div class="curso_todos">
               <div class="curso-div">
               <img class="curso-imagem" src="analise.png" alt="ds">
-              <h3 class="estudante-nome">DESENVOLVIMENTO DE SISTEMAS</h3>
+              <h3 class="estudante-nome">DS/h3>
               <a href="https://cursos.alura.com.br/dashboard">
               <p> </p>
               <img class="estudante-icone" src="whatsapp.png" alt="Link do Site da escola"></a>
@@ -38,7 +38,7 @@
           
           <div class="curso-div">
             <img class="curso-imagem" src="administração.jpg" alt="adm">
-            <h3 class="estudante-nome">ADIMISTRAÇÃO</h3>
+            <h3 class="estudante-nome">ADM</h3>
             <a href="https://cursos.alura.com.br/dashboard">
             <p> </p>
             <img class="estudante-icone" src="whatsapp.png" alt="Link do Site da escola"></a>
@@ -47,7 +47,7 @@
         </div>
           
         <div class="curso-div">
-            <img class="curso-imagem" src="quimica curso.jpg" alt="QUIMICA">
+            <img class="curso-imagem" src="quimica curso.jpg" alt="quimica">
             <h3 class="curso-nome">QUIMICA</h3>
             <a href="https://cursos.alura.com.br/dashboard">
             <p> </p>
@@ -57,7 +57,7 @@
         </div>   
         <div class="curso-div">
             <img class="curso-imagem" src="formação de docentes.jpg" alt="MAGISTERIO">
-            <h3 class="curso-nome">Aluno 4</h3>
+            <h3 class="curso-nome">faculdade ou projeto</h3>
             <a href="https://cursos.alura.com.br/dashboard">
             <p> </p>
             <img class="estudante-icone" src="whatsapp.png" alt="Link do Site da escola"></a>
