--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               <p> </p>
               <div class="curso_todos">
               <div class="curso-div">
-              <img class="curso-imagem" src="analise.png" alt="ds">
+              <img class="curso-imagem" src="..." alt="ds">
               <h3 class="estudante-nome">DS/h3>
               <a href="https://cursos.alura.com.br/dashboard">
               <p> </p>
@@ -37,7 +37,7 @@
           </div>
           
           <div class="curso-div">
-            <img class="curso-imagem" src="administração.jpg" alt="adm">
+            <img class="curso-imagem" src="..." alt="adm">
             <h3 class="estudante-nome">ADM</h3>
             <a href="https://cursos.alura.com.br/dashboard">
             <p> </p>
