--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               <p> </p>
               <div class="curso_todos">
               <div class="curso-div">
-              <img class="curso-imagem" src="..." alt="ds">
+              <img class="curso-imagem" src="analise.png" alt="ds">
               <h3 class="curso-nome">DS</h3>
               <a href="https://cursos.alura.com.br/dashboard">
               <p> </p>
@@ -37,7 +37,7 @@
           </div>
           
           <div class="curso-div">
-            <img class="curso-imagem" src="..." alt="adm">
+            <img class="curso-imagem" src="administração.jpg" alt="adm">
             <h3 class="curso-nome">ADM</h3>
             <a href="https://cursos.alura.com.br/dashboard">
             <p> </p>
@@ -47,7 +47,7 @@
         </div>
           
         <div class="curso-div">
-            <img class="curso-imagem" src="..," alt="quimica">
+            <img class="curso-imagem" src="quimica curso.jpg" alt="quimica">
             <h3 class="curso-nome">QUIMICA</h3>
             <a href="https://cursos.alura.com.br/dashboard">
             <p> </p>
@@ -56,7 +56,7 @@
             <img class="curso-icone" src="facebook.png" alt="Link do Facebook">
         </div>   
         <div class="curso-div">
-            <img class="curso-imagem" src="..." alt="MAGISTERIO">
+            <img class="curso-imagem" src="formação de docentes.jpg" alt="MAGISTERIO">
             <h3 class="curso-nome">faculdade ou projeto</h3>
             <a href="https://cursos.alura.com.br/dashboard">
             <p> </p>
@@ -65,7 +65,7 @@
             <img class="curso-icone" src="facebook.png" alt="Link do Facebook">
         </div>   
         <div class="curso-div">
-            <img class="curso-imagem" src="..." alt="Foto da turma do 1CDS do ano de 2023">
+            <img class="curso-imagem" src="faculdade.jpg" alt="Foto da turma do 1CDS do ano de 2023">
             <h3 class="curso-nome">faculdade ou projeto</h3>
             <a href="https://cursos.alura.com.br/dashboard">
             <p> </p>
