--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 </header>
 <!--Seção banner 1 é a parte do paragrafo 1 da página-->
 <section class="banner">
-<img class="escola.image" src="banner feira das profissoes.png" alt="Banner da Escola">
+<img class="banner.image" src="banner feira das profissoes.png" alt="Banner da Escola">
 </section>
 <!--Seção estudantes é a parte do paragrafo 2 da página-->
-<section class="estudante">
+<section class="curso">
               <h1 class="curso_titulo">FEIRA DE PROFISSÕES</h1>
               <p> </p>
               <div class="curso_todos">
